Fixed layout issues

--- a/Components/Avatar/avatar.css
+++ b/Components/Avatar/avatar.css
@@ -6,7 +6,7 @@
 .img-avatar-container
 {
     width: 100%;
-    height: 150px;
+    height: fit-content;
     box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
     background-color: #F5F7F9;
     display: flex;
