--- a/Docs-Pages/introduction.css
+++ b/Docs-Pages/introduction.css
@@ -16,6 +16,7 @@ hr
 .doc-container
 {
     display: flex;
+    box-sizing: border-box;
 }
 
 .side-bar
